# TurboPivot

./: Cargo.toml  README.md  package-lock.json  package.json  settings.json
src/: App.css  App.tsx  tauri-declarations.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: fs-capability.json  main-capability.json
src-tauri/src/: main.rs  polars_bridge.rs
src/components/: FileSelector.tsx  FilterConfigurator.tsx  PivotConfigurator.tsx  PivotTable.tsx  types.ts
